--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a class="navbar-brand fw-bold" style="color: #5f4b32;" href="index.html">      
             <div class="logo-holder logo-4">
               <h3>Though Creator</h3>
-              <p class="btn btn-primary ">Lokendar's project</p>
+              <p id="Lokendar_project" class=" btn btn-primary ">Lokendar's project</p>
           </div></a>
           <div class="navbar" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -48,15 +48,15 @@
             </div>
         </div>
       </div>
-      <footer class="footer">
-        <div class="player">
+      <footer class="footer" id="waves">
+        <div class="player glowDisabled">
           <audio src="assets/lofi-song.mp3"  loop></audio>
           <i class="fa fa-play play" aria-hidden="true"></i>
           <i class="fa fa-pause pause" aria-hidden="true"></i>
       </div>
-        <p><a class href="mailto:rathodlokendar@gmail.com" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="rathodlokendar@gmail.com"><i class="fa-solid fa-envelope fa-2xl"></i></a></p>
-        <p><a href="https://github.com/rathodloki" target="_blank" rel="noopener noreferrer" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="rathodloki" ><i class="fa-brands fa-github fa-2xl"></i></a></p>
-        <p><a href="https://www.linkedin.com/in/lokendar-singh/" target="_blank" rel="noopener noreferrer" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Lokendar Singh 👋🏻"><i class="fa-brands fa-linkedin fa-2xl"></i></a></p>
+        <p class=" glowDisabled" ><a class href="mailto:rathodlokendar@gmail.com" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="rathodlokendar@gmail.com"><i class="fa-solid fa-envelope fa-2xl"></i></a></p>
+        <p class=" glowDisabled"><a href="https://github.com/rathodloki" target="_blank" rel="noopener noreferrer" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="rathodloki" ><i class="fa-brands fa-github fa-2xl"></i></a></p>
+        <p class=" glowDisabled"><a href="https://www.linkedin.com/in/lokendar-singh/" target="_blank" rel="noopener noreferrer" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Lokendar Singh 👋🏻"><i class="fa-brands fa-linkedin fa-2xl"></i></a></p>
     </footer>
     <script src="assets/dom-to-image.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
