--- a/index.html
+++ b/index.html
@@ -12,18 +12,17 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg " style="background-color: #faf0d9;">
+    <nav class="navbar navbar-expand-lg " style="background-color: var(--secondary-color);">
         <div class="container-fluid" >
-          <a class="navbar-brand fw-bold" style="color: #5f4b32;" href="index.html">      
+          <a class="navbar-brand fw-bold" style="color: var(--primary-color);" href="index.html">      
             <div class="logo-holder logo-4">
-              <h3>Though Creator</h3>
+              <h3>Thought Creator</h3>
               <p id="Lokendar_project" class=" btn btn-primary ">Lokendar's project</p>
           </div></a>
           <div class="navbar" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <p class="nav-link active" style="color: #5f4b32;" aria-current="page"> <a type="button" id="portfolioButton"  href="https://rathodloki.github.io/" target="_blank"  class="btn btn-secondary" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-title="Popover title"  data-bs-content="<img src='assets/profile-img.jpg' alt='Image description'>">
-                  My portfolio 💼
+                <p class="nav-link active" style="color: #5f4b32;" aria-current="page"> <a type="button" id="portfolioButton"  href="https://rathodloki.github.io/" target="_blank">
                 </a></p>
               </li>
             </ul>
@@ -48,7 +47,7 @@
             </div>
         </div>
       </div>
-      <footer class="footer" id="waves">
+      <footer class="footer" >
         <div class="player glowDisabled">
           <audio src="assets/lofi-song.mp3"  loop></audio>
           <i class="fa fa-play play" aria-hidden="true"></i>
