--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a class="navbar-brand fw-bold" style="color: var(--primary-color);" href="index.html">      
             <div class="logo-holder logo-4">
               <h3>Thought Creator</h3>
-              <p id="Lokendar_project" class=" btn btn-primary ">Lokendar's project</p>
+              <p id="Lokendar_project" class=" btn btn-secondary btn-disabled " >Lokendar's project</p>
           </div></a>
           <div class="navbar" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
